# raytracing-engine

./: .gitignore  .~lock.image.ppm#  CMakeLists.txt  README.md  image.ppm
.cache/clangd/index/: camera.h.DA17EBF45E7761E2.idx  color.h.0341B8ED5DC36F7A.idx  hittable-list.h.5522080DC0F46398.idx  hittable.h.412F50CC38C0F3A7.idx  interval.h.3C4A29A9A170B740.idx  main.cxx.41814EAD3FAF0BD9.idx  ray.h.A0BE00EF2406C0A8.idx  sphere.h.0D34F520CB1C1A52.idx  util.h.CFF08FEFAFB45880.idx  vec3.h.088FF04B3AF3BCFF.idx
ppm-image/: main.cxx
src/: main.cxx
src/object-library/: camera.h  color.h  hittable-list.h  hittable.h  interval.h  material.h  ray.h  sphere.h  util.h  vec3.h
vec3/: vec3.h
